--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+---
+layout: post
+title: Joeratt
+---
+
+<ul>
+        {% for post in site.posts %}
+        <li>
+        <a href="{{ post.url }}">{{ post.title }}</a>
+        </li>
+        {% endfor %}
+</ul>
