--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
----
-layout: post
-title: Joeratt
----
-
-<ul>
-        {% for post in site.posts %}
-        <li>
-        <a href="{{ post.url }}">{{ post.title }}</a>
-        </li>
-        {% endfor %}
-</ul>
+<html>
+        <ul>
+                {% for post in site.posts %}
+                <li>
+                <a href="{{ post.url }}">{{ post.title }}</a>
+                </li>
+                {% endfor %}
+        </ul>
+</html>
