--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<html>
-        <ul>
+---
+layout: default
+title: Joe Ratt
+---
+
+<div id="home">
+        <ul class="posts">
                 {% for post in site.posts %}
-                <li>
+                <li>{{ post.date | date_to_string }} &raquo;
                 <a href="{{ post.url }}">{{ post.title }}</a>
                 </li>
                 {% endfor %}
         </ul>
-</html>
+</div>
